--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "prop-types": "^15.6.0",
         "react": "^16.5.1",
         "react-native": "^0.57.5",
+        "react-native-paho-mqtt": "^0.1.1",
         "react-navigation": "^2.17.0",
         "react-redux": "5.0.7",
         "redux": "4.0.0",
