--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "create-react-class": "^15.6.2",
         "debug": "^4.1.0",
         "fs-extra": "^7.0.0",
+        "joystick-component-lib": "^0.1.2",
         "keymirror": "^0.1.1",
         "native-base": "^2.8.1",
         "object-path-immutable": "^3.0.0",
