--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     ],
     "dependencies": {
         "@expo/vector-icons": "^8.0.0",
+        "@react-native-community/slider": "^1.0.4",
         "axios": "^0.18.0",
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-plugin-root-import": "^6.1.0",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.20.0",
+        "color": "^3.1.0",
         "create-react-class": "^15.6.2",
         "debug": "^4.1.0",
         "fs-extra": "^7.0.0",
@@ -42,6 +44,7 @@
         "react": "^16.5.1",
         "react-native": "^0.57.8",
         "react-native-paho-mqtt": "^0.1.1",
+        "react-native-video": "^4.4.1",
         "react-navigation": "^2.17.0",
         "react-redux": "5.0.7",
         "redux": "4.0.0",
