--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react": "^16.5.1",
         "react-native": "^0.57.8",
         "react-native-paho-mqtt": "^0.1.1",
+        "react-native-svg": "^9.4.0",
         "react-native-video": "^4.4.1",
         "react-navigation": "^2.17.0",
         "react-redux": "5.0.7",
